Prevent text from wrapping and sticking too close to page edges

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	max-width: 1000px;
-	padding-top: 300px;
+	padding: 300px 20px 0 20px;
 	width: 100%;
 }
 
@@ -79,12 +79,16 @@ body {
 
 	#intro > span {
 		margin-left: 0;
-		font-size: 1.2rem;
+		font-size: 1rem;
 	}
 
 	#full-name-container {
 		align-items: center;
 		align-self: center;
+	}
+
+	#full-name-preline {
+		font-size: 1.2rem;
 	}
 
 	#full-name-title {
